# gv-experiments

./: .gitignore  CMakeLists.txt  README.md  demo.cpp
c++-wrapper/: CMakeLists.txt  context.h  edge.h  graph.h  layout.h  node.h  node_iterator.h  object.h
c++-wrapper/impl/: context.cpp  edge.cpp  edge_impl.h  graph.cpp  graph_impl.h  impl.h  impl_accessor.h  impl_old.h  layout.cpp  node.cpp  node_impl.h  node_iterator.cpp  object.cpp  object_impl.h  streambuf_iodisc.h  tmp_string.h
c++-wrapper/test/: CMakeLists.txt  wrapper-test.cpp
